# onnx2fx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/onnx2fx/: __init__.py  converter.py  exceptions.py  graph_builder.py  op_registry.py
src/onnx2fx/ops/: __init__.py  activation.py  advanced.py  arithmetic.py  attention.py  attention_msft.py  control.py  control_flow.py  convolution.py  image.py  linalg.py  loss.py  misc.py  nn.py  normalization.py  pooling.py  quantization.py  random.py  recurrent.py  reduction.py  sequence.py  signal.py  string.py  tensor.py  training.py
src/onnx2fx/utils/: __init__.py  analyze.py  attributes.py  dtype.py  external_data.py  names.py  op_helpers.py  training.py
tests/: conftest.py  smoke_test.py  test_activation.py  test_advanced.py  test_arithmetic.py  test_attention.py  test_attribute.py  test_constant.py  test_control.py  test_control_flow.py  test_custom_ops.py  test_dtype_mapping.py  test_dynamic_shapes.py  test_e2e_models.py  test_einsum.py  test_image.py  test_image_ops.py  test_initializer.py  test_lfm25_model.py  test_lfm2_model.py  test_loss.py  test_math.py  test_math_functions.py  test_nn.py  test_onnx_backend_test.py  test_onnx_ops.py  test_opset_versions.py  test_paddleocr_models.py  test_quantization.py  test_random.py  test_sequence.py  test_smolvlm_models.py  test_tensor_ops.py  test_tinyllama.py  test_torchvision_models.py  test_training.py  test_trigonometric.py
