[project]
name = "onnx2fx"
version = "0.1.0"
description = "Yet another ONNX to PyTorhch FX converter"
readme = "README.md"
authors = [
    { name = "Masahiro Hiramori", email = "contact@mshr-h.com" }
]
requires-python = ">=3.11"
dependencies = [
    "onnx>=1.19.1",
    "onnxscript>=0.5.7",
    "torch>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "huggingface-hub>=0.33.3",
    "onnxruntime>=1.23.2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.4",
    "torchvision>=0.24.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
