[project]
name = "onnx2fx"
dynamic = ["version"]
description = "Yet another ONNX to PyTorch FX converter"
readme = "README.md"
urls = { "Homepage" = "https://github.com/mshr-h/onnx2fx" }
authors = [{ name = "Masahiro Hiramori", email = "contact@mshr-h.com" }]
requires-python = ">=3.11"
dependencies = ["onnx>=1.19.1", "torch>=2.9.0"]
license-files = ["LICENSE"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx2fx"]

[dependency-groups]
dev = [
    "huggingface-hub>=0.36.0",
    "onnxscript>=0.5.7",
    "onnxruntime>=1.23.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
    "torchvision>=0.24.0",
    "transformers>=5.0.0rc2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# Asyncio mode for pytest-asyncio (auto mode for convenience)
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Additional pytest settings inspired by datasette-enrichments
testpaths = ["tests"]
# Treat warnings as errors to catch issues early
filterwarnings = [
    "error",
    # Allow specific warnings if needed
    "ignore::DeprecationWarning:torch.*:",
    "ignore::UserWarning:torch.*:",
    "ignore::DeprecationWarning:onnxscript.*:",
]
